parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Community.Suite/content/Controllers/Community/CommunityController.cs.pp
namespace $rootnamespace$.Controllers.Community
{
    using System.Web.Mvc;

    public class CommunityController : Controller
    {
        public ActionResult Index()
        {
            return this.View();
        }
    }
}
